# zeren-ai-lite

./: .env.example  README.md  dictionary.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/core/: data_models.py  event_bus.py  journal.py  module_base.py  monitoring.py
src/strategy/: neural_risk_guard.py  portfolio_optimizer.py  risk_manager.py  sentiment_analyzer.py  signal_generator.py
tests/: test_event_bus.py  test_risk_manager.py
