[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zeren-ai-lite"
version = "1.0.0"
description = "Zeren AI Projesinin Lite ve Mimari Gösterim Versiyonu"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Zeren AI Team" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "pydantic>=2.0.0",
    "asyncio",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
